sample/retrieveUnpackaged/objects/Consumption_and_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Adhoc_Charge__c</fullName>
        <label>Adhoc Charge ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjusted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipName>Account_Periodic_Consumption_and_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concession_Amount__c</fullName>
        <label>Concession Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Read_Date__c</fullName>
        <description>Current consumption meter read date.</description>
        <inlineHelpText>Current consumption meter read date.</inlineHelpText>
        <label>Current Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drainage_Charge__c</fullName>
        <label>Drainage Charge ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Service_Usage_Cost__c</fullName>
        <label>Fire Service Usage Cost ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fire_Service_Volume__c</fullName>
        <label>Fire Service Volume (KL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by workflow and unset by batch apex</description>
        <label>Is Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Misc_Charge__c</fullName>
        <label>Misc Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <description>Number of days in the consumption period (based on meter read dates)</description>
        <inlineHelpText>Number of days in the consumption period (based on meter read dates)</inlineHelpText>
        <label>Number of Days</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parks_Charge__c</fullName>
        <label>Parks Charge ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Quarter 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Read_Date__c</fullName>
        <description>Previous consumption meter read date</description>
        <inlineHelpText>Previous consumption meter read date</inlineHelpText>
        <label>Previous Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recycled_Water_Cost__c</fullName>
        <label>Recycled Water Cost ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recycled_Water_Service_Charge__c</fullName>
        <label>Recycled Water Service ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recycled_Water_Volume__c</fullName>
        <label>Recycled Water Volume (KL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sewage_Disposal_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sewage Disposal Cost ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sewage_Disposal_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sewage Disposal Volume (KL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sewage_Service_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sewage Service ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Flag to identify data migrated from legacy systems eg. DTDigital.</description>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Waste_Agreement__c</fullName>
        <description>Trade Waste Agreement Fee</description>
        <label>Trade Waste Agreement ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Waste_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trade Waste Usage Cost ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Waste_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Trade Waste Volume (KL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Water_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Water Usage Cost ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Service_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Service charge for water</description>
        <label>Water Service ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Use_Range__c</fullName>
        <formula>If( Water_Volume__c &gt;5000&amp;&amp;Water_Volume__c&lt;10000, &quot;5-10&quot;, IF(Water_Volume__c&gt;50000,&quot;&gt;50&quot;,  &quot;10-50&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Water Use Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Water Volume (KL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Consumption and Charge</label>
    <nameField>
        <label>Consumption Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumption and Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>